# foo

./: .gitmodules  AddGitSubmodule.cmake  CMakeLists.txt  README.md  compile_sdl.bat  compile_sdl_image.bat
lib/: SDL3_main.lib
src/: app.cpp  app.hpp  application.cpp  application.hpp  cons.hpp  constants.hpp  main.cpp
src/cache/: tex.cpp  tex.hpp
src/components/: player.hpp  position.hpp  sprite.hpp  velocity.hpp
src/manager/: input_manager.cpp  input_manager.hpp  texture_manager.cpp  texture_manager.hpp
src/object/: character.cpp  character.hpp  game.cpp  game.hpp  game_object.hpp  player.cpp  player.hpp  vector2d.cpp  vector2d.hpp
src/params/: character.hpp  character_params.hpp
src/state/: game_state.cpp  game_state.hpp  menu_state.cpp  menu_state.hpp  play_state.cpp  play_state.hpp  state_machine.cpp  state_machine.hpp
src/systems/: draw.hpp  input.hpp  make.hpp  move.hpp
src/systems/input/: command.hpp  down_command.hpp  input_handler.hpp  up_command.hpp
src/utils/: vector2d.cpp  vector2d.hpp
